# manydeps-ginac

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  cln.BUILD  ginac.BUILD  gmp-install.sh  gmp.BUILD  gmp.vcpkg.BUILD  script-deps-manual-linux-gcc.sh  script-deps.sh
.devcontainer/: devcontainer.json
.github/workflows/: bazel-multi-platform.yml  cmake-multi-platform.yml
include/: BUILD.bazel
include/manydeps-ginac-lib/: BUILD.bazel  Testing.hpp
src/: main.cpp  main_cln.cpp
tests/: BUILD.bazel  manydeps_ginac.test.cpp
tools/patch/: cln-CMakeLists.txt  cln-CMakePresets.json  cln-script-cln.sh  cln-src-CMakeLists.txt  factor.cpp  ginac-CMakeLists.txt  ginac-CMakePresets.json  ginac-script-ginac.sh
